Add example with fake data

--- a/src/index.html
+++ b/src/index.html
@@ -7,5 +7,10 @@
   </head>
   <body>
     <h1>Test Website</h1>
+    <ul>
+      {{ #sermons }}
+      <li>{{ title }}</li>
+      {{ /sermons }}
+    </ul>
   </body>
 </html>
