--- a/src/index.html
+++ b/src/index.html
@@ -6,11 +6,11 @@
     <title>Test Website</title>
   </head>
   <body>
-    <h1>Test Website</h1>
+    <h1>Meetups</h1>
     <ul>
-      {{ #sermons }}
-      <li>{{ title }}</li>
-      {{ /sermons }}
+      {{ #meetups }}
+        <li>{{> partials/meetup }}</li>
+      {{ /meetups }}
     </ul>
   </body>
 </html>
